--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// https://mvnrepository.com/artifact/org.json/json
+    implementation 'org.json:json:20231013'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
